--- a/movieslib/package.json
+++ b/movieslib/package.json
@@ -1,5 +1,6 @@
 {
   "name": "movieslib",
+  "homepage": "https://bibliotecadefilmes1.ayasolucoes.com.br",
   "private": true,
   "version": "0.0.0",
   "scripts": {
